# project_django

./: LICENSE  README.md  pyproject.toml
app_instagram/app_auth/: forms.py  urls.py  views.py
app_instagram/app_auth/templates/app_auth/: login.html  logout.html  register.html
app_instagram/app_instagram/: settings.py
app_instagram/app_photo/: forms.py  models.py  urls.py  views.py
app_instagram/app_photo/migrations/: 0001_initial.py  0002_picture_user.py
app_instagram/app_photo/templates/app_photo/: base.html  edit_desc.html  index.html  pictures.html  upload.html
