[tool.poetry]
name = "first-project-django"
version = "0.1.0"
description = ""
authors = ["Yevhenii Korniev <94477980+Korniev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
